Added some comments.

--- a/testing_script.ipynb
+++ b/testing_script.ipynb
@@ -530,15 +530,26 @@
         "\n",
         "Work to see how we can define edge-weights for the current model. More possible ideas for fine-tuning the LLM prompt to get cleaner results.\n",
         "\n",
-        "Now that we have a baseline of company-company relationships, how can we define edge weights and upstream/downstream features to create a baseline graph."
+        "Now that we have a baseline of company-company relationships, how can we define edge weights and upstream/downstream features to create a baseline graph.\n",
+        "\n",
+        "**Changes made**\n",
+        "\n",
+        "Setting this environment up in Google Colab so that it can be used by anyone. Also added the functionality above for testing so that you can try to debug this script by yourself."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "y8evCxMcJQeF"
       },
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": []
     }
